# streamflood

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  clock_streams.cpp
include/streamflood/: streamflood.h
src/: streamflood.cpp
